fixed dark mode colors & spinner

--- a/src/App.css
+++ b/src/App.css
@@ -54,12 +54,3 @@
   z-index: 1000;
 }
 
-.loading {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 2rem;
-  z-index: 1000;
-  text-align: center;
-}
